--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-github": "ng build --prod --output-path docs --base-href \"https://borikesch.github.io/survival-game\""
+    "build-github": "ng build --prod --output-path docs --base-href \"https://borikesch.github.io/survival-game/\""
   },
   "private": true,
   "dependencies": {
